FATAL_PY.txt
Traceback (most recent call last):
  File "py/execute.py", line 18, in <module>
    args[i] = ast.literal_eval(args[i])
  File "/usr/lib/python3.8/ast.py", line 59, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/usr/lib/python3.8/ast.py", line 47, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    5 15
      ^
SyntaxError: unexpected EOF while parsing
